# LLAI_BE

./: README.md  docker-compose.yml  pyproject.toml
server/courses/: models.py  serializers.py  urls.py  views.py
server/courses/migrations/: 0001_initial.py  0002_exercise_language_code.py  0003_alter_exercisehint_unique_together.py
server/server/: settings.py  urls.py
server/speech/: urls.py  views.py
server/speech/templates/: record.html  tts_test.html
server/utils/: enum_type.py
