[tool.poetry]
name = "datn"
version = "0.1.0"
description = "AI-powered foreign language learning platform"
authors = ["wijez <viet.info.43@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.2.6"
djangorestframework = "^3.16.1"
django-cors-headers = "^4.7.0"
channels = "^4.3.1"
channels-redis = "^4.3.0"
celery = "^5.5.3"
redis = "^6.4.0"
djangorestframework-simplejwt = "^5.5.1"
drf-spectacular = "^0.28.0"
psycopg = {extras = ["binary"], version = "^3.2.9"}
python-dotenv = "^1.1.1"
# AI and ML dependencies
openai = "^1.54.0"
speechrecognition = "^3.10.1"
pydub = "^0.25.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
scikit-learn = "^1.4.1"
matplotlib = "^3.8.4"
seaborn = "^0.13.2"
# Audio processing
librosa = "^0.10.2"
soundfile = "^0.12.1"
# Web scraping for content
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
# File handling
pillow = "^10.2.0"
# Utilities
python-decouple = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
